<resources>
    <string name="app_name">LutemonGO</string>
    <string name="welcome">Welcome to Lutemon!</string>
    <string name="lutemonball">Lutemonball</string>
    <string name="lutemon">Lutemon</string>
    <string name="attack">Attack</string>
    <string name="defence">Defence</string>
    <string name="health_points">Health points</string>
    <string name="hp">Hp</string>
    <string name="experience">Experience</string>
    <string name="color">Color</string>
    <string name="placeholder">placeholder</string>
    <string name="number">num</string>

    <string name="train">Train</string>
    <string name="create">Create</string>
    <string name="fight">Fight</string>
    <string name="home">Home</string>
    <string name="stats">Stats</string>
    <string name="cancel">Cancel</string>
    <string name="main">Main</string>

    <string name="createText">Create Lutemon!</string>
    <string name="chooseColor">Choose Color</string>
    <string name="black">Black</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="lila">Lila</string>
    <string name="name">Name</string>

    <string name="view_charts">View Charts</string>
    <string name="general_stats">General Stats</string>
    <string name="lutemon_performance">Lutemon Performance</string>

    <string name="move_lutemon">select to move</string>
    <string name="battles">Battles</string>
    <string name="wins">Wins</string>
    <string name="training">Training</string>

    <string name="train_lutemon">Train Lutemon</string>
    <string name="move_lutemon_to_home">Move home</string>
    <string name="battlefield">Battlefield</string>
    <string name="next_attack">Next Attack</string>
    <string name="end_battle">End Battle</string>

    <string name="attack_format">Attack: %d</string>
    <string name="defence_format">Defence: %d</string>
    <string name="health_format">HP: %d</string>

</resources>