<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".activities.MainActivity">


    <!--Lutemon Image-->
    <ImageView
        android:id="@+id/lutemonImage"
        android:layout_width="100dp"
        android:layout_height="170dp"
        android:contentDescription="@string/lutemon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lutemonball" />

    <!--Name text-->
    <TextView
        android:id="@+id/lutemonNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/name"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/lutemonImage"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Color text-->
    <TextView
        android:id="@+id/lutemonColorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/color"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/lutemonImage"
        app:layout_constraintTop_toBottomOf="@+id/lutemonNameText" />

    <!--Experience text-->
    <TextView
        android:id="@+id/lutemonExpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/experience"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/lutemonImage"
        app:layout_constraintTop_toBottomOf="@+id/lutemonColorText" />


    <!--Attack text-->
    <TextView
        android:id="@+id/lutemonAtkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/attack"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/lutemonImage"
        app:layout_constraintTop_toBottomOf="@+id/lutemonExpText" />

    <!--Defence text-->
    <TextView
        android:id="@+id/lutemonDefText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/defence"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/lutemonAtkText"
        app:layout_constraintTop_toBottomOf="@+id/lutemonExpText" />

    <!--Health text-->
    <TextView
        android:id="@+id/lutemonHpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/hp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/lutemonExpText"
        app:layout_constraintTop_toBottomOf="@+id/lutemonColorText" />

    <!--MaxHealth text-->
    <TextView
        android:id="@+id/lutemonMaxHpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:text="@string/hp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/lutemonHpText"
        app:layout_constraintTop_toBottomOf="@+id/lutemonColorText" />


    <!--Checkbox to move lutemon-->
    <CheckBox
        android:id="@+id/lutemonCheckBox"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:text="@string/move_lutemon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>