<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <!--Title text
    please use @string for texts
    -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/welcome"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Lutemon ball image-->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="55dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/lutemonball" />

    <!--Create Button-->
    <Button
        android:id="@+id/go_create_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="81dp"
        android:text="@string/create"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <!--Home Button-->
    <Button
        android:id="@+id/go_home_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="81dp"
        android:text="@string/home"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_create_button" />

    <!--Train Button-->
    <Button
        android:id="@+id/go_train_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="81dp"
        android:text="@string/train"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_home_button" />

    <!--Fight Button-->
    <Button
        android:id="@+id/go_fight_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="81dp"
        android:text="@string/fight"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_train_button" />

    <!--Stats Button-->
    <Button
        android:id="@+id/go_stats_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="81dp"
        android:text="@string/stats"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_fight_button" />

</androidx.constraintlayout.widget.ConstraintLayout>