<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.MainActivity">

    <!--Title text
    please use @string for texts
    -->
    <TextView
        android:id="@+id/trainingTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/battlefield"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Next Attack Button-->
    <Button
        android:id="@+id/nextAttackButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="8dp"
        android:text="@string/next_attack"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/endBattleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--End Battle Button-->
    <Button
        android:id="@+id/endBattleButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="8dp"
        android:text="@string/end_battle"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/main_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--Main Button-->
    <Button
        android:id="@+id/main_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="59dp"
        android:text="@string/main"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--Battlefield text-->
    <TextView
        android:id="@+id/battlefieldText"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginBottom="8dp"
        android:text="@string/placeholder"
        app:layout_constraintBottom_toTopOf="@+id/nextAttackButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>