<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.MainActivity">

    <!--Title text
    please use @string for texts
    -->
    <TextView
        android:id="@+id/trainingTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/training"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Move Home Button-->
    <Button
        android:id="@+id/moveHomeButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="8dp"
        android:text="@string/move_lutemon_to_home"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/trainButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--Train Button-->
    <Button
        android:id="@+id/trainButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="8dp"
        android:text="@string/train"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/main_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--Main Button-->
    <Button
        android:id="@+id/main_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="59dp"
        android:text="@string/main"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerViewTraining"
        android:layout_width="409dp"
        android:layout_height="200dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="1dp"
        android:contentDescription="@string/placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trainingTitleText" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/moveHomeButton"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="161dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/training" />

</androidx.constraintlayout.widget.ConstraintLayout>